--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,8 @@ AllCops:
     - public/**/*
     - vendor/**/*
     - 'app/controllers/articles_controller.rb'
+    - 'app/models/user.rb'
+    - 'db/migrate/20220910230938_add_timestamp_to_articles.rb'
 
 Rails:
   Enabled: true # enable rubocop-rails cops
